--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "kim-vue-touch": "^1.1.4",
+    "three-spritetext": "^1.0.6",
+    "three-trackballcontrols": "0.0.7",
+    "three-tween": "^1.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -20,6 +24,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "three": "^0.103.0",
+    "three-orbit-controls": "^82.1.0",
+    "three-svg-loader": "^0.2.4",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
